# delivery-system

./: README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile
backend/migrations/2023-06-03-083017_create_users/: down.sql  up.sql
backend/migrations/2023-06-03-153802_create_delivery_domain/: down.sql  up.sql
backend/src/: config.rs  main copy 2.rs  main copy.rs  main.rs  schema.rs
backend/src/auth/: app.rs  domain.rs  infra.rs
backend/src/auth/app/: api.rs  auth.rs  jwt_auth.rs  users.rs  views.rs
backend/src/auth/app/api/: auth.rs  users.rs
backend/src/auth/domain/: repository.rs  role.rs  user.rs
backend/src/auth/domain/repository/: role_repository_trait.rs  user_repository_trait.rs
backend/src/auth/infra/: role_repository_im.rs  role_repository_pg.rs  user_repository_im.rs  user_repository_pg.rs
backend/src/delivery/: domain.rs  infra.rs
backend/src/delivery/app/: api.rs
backend/src/delivery/app/api/: parcel.rs  report.rs  structs.rs  trade_partner.rs
backend/src/delivery/domain/: address.rs  parcel.rs  repository.rs  service.rs  status_record.rs  trade_partner.rs  value_objects.rs  warehouse.rs
backend/src/delivery/domain/repository/: address_reposiory_trait.rs  (+4 more)
backend/src/delivery/infra/: address_repository_im.rs  address_repository_pg.rs  parcel_repository_im.rs  parcel_repository_pg.rs  status_record_repository_im.rs  status_record_repository_pg.rs  trade_partner_repository_im.rs  trade_partner_repository_pg.rs  warehouse_repository_im.rs  warehouse_repository_pg.rs
frontend/: README.md  (+3 more)
(+56 files in other folders)
