[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
argon2 = "0.5.0"
chrono = "0.4.24"
dotenv = "0.15.0"
env_logger = "0.10.0"
jsonwebtoken = "8.3.0"
lazy_static = "1.4.0"
rust_decimal = "1.29.1"
rusty-money = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
utoipa = { version = "3", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3", features = ["actix-web"] }
utopia = "0.0.1"
